Added partial filter fuinctionality

--- a/packages/client/src/assets/locales/en.json
+++ b/packages/client/src/assets/locales/en.json
@@ -148,7 +148,10 @@
         "process": {
             "status": {
                 "processed": "Yes",
-                "notProcessed": "No"
+                "notProcessed": "No",
+                "all": "All labels",
+                "partial": "Partial",
+                "none": "None"
             }
         }
     },
