--- a/packages/client/src/assets/locales/nl.json
+++ b/packages/client/src/assets/locales/nl.json
@@ -143,7 +143,10 @@
         "process": {
             "status": {
                 "processed": "Ja",
-                "notProcessed": "Nee"
+                "notProcessed": "Nee",
+                "all": "Alle labels",
+                "partial": "Gedeeltelijk",
+                "none": "Geen"
             }
         }
     },
